# python-image-sorter-gui

./: .gitignore  LICENSE  README.md  constants.py  main.py  main_window.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
tests/: test_main.py
themes/: style.qss  theme_manager.py
