[project]
name = "python-media-sorter-gui"
version = "0.1.0"
description = "A PyQt6 desktop GUI for sorting media files into category folders"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.7,<7",
    "PyQt6-Qt6>=6.7,<7",
    "PyQt6-sip>=13.6,<14",
    "send2trash>=1.8,<2",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-third-party = ["PyQt6", "send2trash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
